# wttr

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: cli.yml  main.rs
