[package]
name = "wttr"
version = "0.2.0"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/fyko/wttr"
documentation = "https://github.com/fyko/wttr#readme"
description = "a cli app to interact with https://wttr.in/ via the CLI"
edition = "2018"
keywords = ["weather", "wttr", "cli"]
authors = ["Carter Himmel <me@fyko.net>"]



[dependencies]
clap = { version = "2", features = ["yaml"] }
reqwest = { version = "0.10", features = ["blocking"] }